--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,23 @@
         tools:context=".MapsActivity"
         android:name="com.google.android.gms.maps.SupportMapFragment" />
 
+        <ng.max.slideview.SlideView
+            android:id="@+id/slideView"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:sv_buttonBackgroundColor="#FFFFFF"
+            app:sv_buttonImage="@drawable/sv_ic_chevron_double_right"
+            app:sv_slideBackgroundColor="#3F51B5"
+            app:sv_slideText="Slide to GO LIVE"
+            app:sv_slideTextColor="#FFFFFF"
+            app:sv_slideTextSize="20sp"
+            android:layout_marginRight="40dp"
+            android:layout_marginLeft="40dp"
+            app:sv_animateSlideText="true"
+            app:sv_reverseSlide="false"/>
+
     </RelativeLayout>
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
